...
            Text("Personalize your pet's page with photos, details and memories.")
                .font(Theme.Fonts.bodyLargeRegular)
                .foregroundStyle(Theme.Colors.dark1.opacity(0.5))
                .frame(maxWidth: .infinity, alignment: .leading)
                .padding(.horizontal)
            
            CustomTextField(placeholder: "Email", text: $viewModel.email)
                .padding()
            CustomTextField(placeholder: "Password", text: $viewModel.password, isPassword: true)
                .padding(.horizontal)
            CustomTextField(placeholder: "Re-Type Password", text: $viewModel.reTypePassword, isPassword: true)
                .padding()
            
            if let error = viewModel.error {
                Text(error)
...
            .padding()
            Spacer()
            HStack{
                Text("Already has an account?")
                    .font(Theme.Fonts.bodyLargeRegular)
                    .foregroundStyle(Theme.Colors.dark1)
                Text("Sign In")
                    .font(Theme.Fonts.bodyLargeRegular)
                    .foregroundStyle(Theme.Colors.primary1)
                    .onTapGesture {
                        dismiss()
                    }
            }
...
